[gd_scene load_steps=3 format=3 uid="uid://urggwi841jnj"]

[ext_resource type="Texture2D" uid="uid://bnsve61b3ddyn" path="res://icon.svg" id="1_bnhcl"]
[ext_resource type="Script" path="res://main_menu.gd" id="1_k0qd8"]

[node name="Main Menu" type="CanvasLayer"]
script = ExtResource("1_k0qd8")

[node name="menu background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="game logo" type="TextureRect" parent="."]
offset_left = 896.0
offset_top = 201.0
offset_right = 1024.0
offset_bottom = 329.0
grow_horizontal = 2
size_flags_horizontal = 4
texture = ExtResource("1_bnhcl")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 244.0
offset_top = 201.0
offset_right = -244.0
offset_bottom = -201.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="spacer2" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
size_flags_stretch_ratio = 8.0

[node name="start button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
text = "Start
"

[node name="controls button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
text = "Controls"

[node name="credits button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
text = "Credits
"

[node name="exit button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
text = "Exit
"

[node name="spacer" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
size_flags_stretch_ratio = 5.0

[node name="Credits" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.0
offset_top = -107.0
offset_right = 183.0
offset_bottom = 259.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
focus_mode = 2
text = "Game Design:
Nicole Dingle
Brendan Fallon
Hani Dawood

Game Development:
Hani Dawood
Brendan Fallon

Music and sounds:
Nicole Dingle

Sprites and art:
Nicole Dingle"
horizontal_alignment = 1
vertical_alignment = 1

[node name="back button" type="Button" parent="Credits"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = 260.0
offset_right = 22.5
offset_bottom = 291.0
grow_horizontal = 2
grow_vertical = 2
text = "back
"

[node name="Controls" type="TextureRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -371.0
offset_top = -371.0
offset_right = 371.0
offset_bottom = 371.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_bnhcl")

[node name="back button" type="Button" parent="Controls"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = 398.0
offset_right = 22.5
offset_bottom = 429.0
grow_horizontal = 2
grow_vertical = 2
text = "back
"

[connection signal="pressed" from="VBoxContainer/start button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/controls button" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="VBoxContainer/credits button" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VBoxContainer/exit button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Credits/back button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Controls/back button" to="." method="_on_back_button_pressed"]
